--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,84 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;1,200&display=swap");
+
+* {
+  font-family: "Poppins", sans-serif;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  width: 100vw;
+  height: 100vh;
+  background: #5f9ea0;
   display: flex;
-  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  transition: all 2s;
+}
+
+#quote-box {
+  width: 35%;
+  padding: 30px;
+  height: fit-content;
+  background: white;
+  transition: all 2s;
+
+  border-radius: 10px;
+}
+.quote {
+  font-size: 1.5rem;
+  transition: all 1s;
+  font-weight: 900;
+  display: flex;
+  justify-content: center;
+
+  text-transform: uppercase;
+}
+.author {
+  display: flex;
+  justify-content: flex-end;
+  font-size: 1.5rem;
+  font-weight: 300;
+  margin-bottom: 10px;
+  transition: all 2s;
+}
+
+.share {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  transition: all 2s;
+}
+
+.socials {
+  display: flex;
+
+  gap: 10px;
+  flex-direction: row;
+}
+.socials > a {
+  width: 50px;
+  transition: all 2s;
+  height: 50px;
+  display: inherit;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: 1.7rem;
+  border-radius: 5px;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.button {
+  width: 121px;
+  height: 44px;
+  text-decoration: none;
+  display: inherit;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  border-radius: 7px;
+  transition: all 2s;
+  font-weight: 600;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+span {
+  padding-left: 40px;
 }
